--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         minSdkVersion = 23
         javaSourceCompatibility = JavaVersion.VERSION_1_8
         javaTargetCompatibility = JavaVersion.VERSION_1_8
+        kotlin_version = '1.3.61'
     }
 
     repositories {
@@ -20,7 +21,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
-        
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
