--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,14 +54,14 @@ android {
             applicationIdSuffix ".mvp"
 
             manifestPlaceholders = [
-                APP_NAME: "Android"
+                APP_NAME: "FusEcho"
             ]
         }
     }
 
     applicationVariants.all { variant ->
         variant.outputs.all {
-            outputFileName = "Android-${variant.versionCode}-${variant.versionName}-${variant.name}.apk"
+            outputFileName = "FusEcho-${variant.versionCode}-${variant.versionName}-${variant.name}.apk"
         }
     }
 }
@@ -79,5 +79,6 @@ dependencies {
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jaredrummler:animated-svg-view:1.0.5'
 
 }
